@@ -1,3 +1,10 @@
+2007-07-04  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/agents/save.py:
+	* gaupol/gtk/conf/__init__.py:
+	* gaupol/util.py:
+	Fix remaining errors so that all unittests pass.
+
 2007-07-03  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/const.py:
